feat: Add chat reducer

--- a/src/assets/scss/_addProperty.scss
+++ b/src/assets/scss/_addProperty.scss
@@ -225,7 +225,8 @@
 }
 
 .listing-description {
-  input {
+  .MuiInputBase-input {
+    line-height: $medium-line-height;
     font-size: $medium-font-size;
   }
   .MuiFormHelperText-root {
