--- a/src/assets/scss/_muiOverride.scss
+++ b/src/assets/scss/_muiOverride.scss
@@ -7,27 +7,32 @@
 .MuiInput-underline:before {
   border-bottom: 1px solid $input-border-colour !important;
 }
-.MuiInput-underline:after{
-  border-bottom: 1px solid $deep-purple !important;;
+.MuiInput-underline:after {
+  border-bottom: 1px solid $deep-purple !important;
 }
 .MuiMenuItem-root {
   line-height: 2;
 }
 
-.MuiFormLabel-root{
+.MuiFormLabel-root {
   font-family: $regular-font-family;
   font-size: $medium-font-size;
-
 }
-.MuiFormLabel-root.Mui-focused{
+.MuiFormLabel-root.Mui-focused {
   font-size: $small-font-size;
   font-family: $regular-font-family;
 }
 .MuiInputBase-input {
   font-size: $medium-font-size;
   font-family: $regular-font-family;
+  line-height: $medium-line-height;
 }
 
+input {
+  &:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 1000px white inset;
+  }
+}
 .MuiMenu-list {
   height: 190px;
 }
