feat: Add ReRoute component

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -49,3 +49,8 @@ ul {
 h1{
   font-family: proxima-nova-bold, sans-serif;
 }
+a{
+  color: transparent;
+  text-decoration: none;
+  background-color: transparent;
+}
