feat: Add correct link to navbar

--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -209,6 +209,10 @@
   box-shadow: 0 6px 6px -3px rgba(0, 0, 0, 0.2),
     0px 10px 14px 1px rgba(0, 0, 0, 0.14), 0px 4px 18px 3px rgba(0, 0, 0, 0.12);
 
+  .MuiSvgIcon-fontSizeInherit {
+    font-size: 20px;
+  }
+
   li {
     display: flex;
     align-items: center;
@@ -226,10 +230,9 @@
   }
   .name-dropdown-icon {
     padding-right: 10px;
-
-    svg {
-      height: $svg-big-size;
-    }
+    //svg{
+    //  font-size: 20px;
+    //}
   }
 }
 .show-name-dropdown {
