--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -9,9 +9,12 @@
   }
   .dropdown-item-icon {
     padding-right: 20px;
-    svg {
-      height: $svg-big-size;
+    .MuiSvgIcon-fontSizeInherit {
+      font-size: $svg-small-size;
     }
+    //svg {
+    //  height: $svg-big-size;
+    //}
   }
   h5 {
     font-size: $small-font-size;
